Image preview enhancement (closed #1288, closed #1289, closed #1290)
git-svn-id: file:///home/svn/shoola-omero/trunk@7171 6f2cb1de-eb0d-0410-b157-e593188b5901